<resources>
    <string name="app_name">Grocery App</string>
    <string name="login_title">Sign in with mobile</string>
    <string name="hint_mobile">Mobile</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="btn_signin">Sign In</string>
    <string name="btn_register">Need an account?</string>
    <string name="btn_forgot_password">Forgot Passwrod?</string>
    <string name="register_title">Create an Account</string>
    <string name="first_name">First Name</string>
    <string name="address">Address</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_address">Address</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="btn_signup">Sign Up</string>
    <string name="btn_login">Already Have An Account?</string>
    <string name="btn_register_login">Already have an account?</string>
    <string name="action_cart">Cart</string>
    <string name="btn_add_to_cart">Add To Cart</string>
    <string name="btn_view_cart">View Cart</string>
    <string name="btn_checkout">Checkout</string>
    <string name="btn_plus">+</string>
    <string name="btn_minus">-</string>
    <string name="btn_remove">Remove</string>
    <string name="action_orders">Orders</string>
    <string name="action_categories">Categories</string>
    <string name="action_logout">Logout</string>
</resources>